Add github oauth

--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3"
+  },
+  "devDependencies": {
+    "oauth": "^0.9.15"
   }
 }
