--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "express-partials": "^0.3.0",
+    "express-session": "^1.15.3",
+    "method-override": "^2.3.9",
+    "passport": "^0.3.2",
+    "passport-github2": "^0.1.10",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "oauth": "^0.9.15",
-    "pug": "^2.0.0-rc.2"
+    "pug": "^2.0.0-rc.2",
+    "request": "^2.81.0"
   }
 }
