--- a/Client/package.json
+++ b/Client/package.json
@@ -28,6 +28,7 @@
     "webpack": "^2.5.1"
   },
   "dependencies": {
+    "jquery": "^3.2.1",
     "phaser-ce": "^2.7.9",
     "webfontloader": "^1.6.27"
   }
