--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
     "express": "^4.15.3",
     "express-partials": "^0.3.0",
     "express-session": "^1.15.3",
